add meta in head html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,46 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="keywords"
+      content="website portofolio,personal portofolio, muhammad azar nuzy, front end portofolio"
+    />
+    <meta
+      name="description"
+      content="This is my personal Website that contain all of my activities and projects."
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="Googlebot" content="index,follow" />
+    <meta name="AdsBot-Google" content="index,follow" />
+    <meta
+      property="og:site_name"
+      content="https://azar-personal-site.netlify.app//"
+    />
+    <meta property="og:title" content="M. Azar Nuzy | Personal Site" />
+    <meta
+      property="og:description"
+      content="This is my personal Website that contain all of my activities and projects."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://azar-personal-site.netlify.app//"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:site"
+      content="https://azar-personal-site.netlify.app//"
+    />
+    <meta name="application-name" content="M. Azar Nuzy | Personal Site" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="M. Azar Nuzy | Personal Site"
+    />
+    <meta
+      name="summary"
+      content="This is my personal Website that contain all of my activities and projects."
+    />
+    <title>Azar | Site</title>
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
