add image tag meta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="description"
       content="This is my personal Website that contain all of my activities and projects."
     />
+    <meta property="og:image" content="hero.png" />
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
